--- a/index.html
+++ b/index.html
@@ -381,6 +381,23 @@
 						</div>
 						<div class="col-sm-10 col-9">
 							<div class="row">
+								<span><span class="my-section-content-title">Mathematics for Machine Learning Specialization / </span>Coursera</span>
+							</div>
+							<div class="row my-secton-content-period">
+								<p>
+									<span>
+										Credential ID: <a href="https://www.coursera.org/account/accomplishments/specialization/CBBBANRZEH93" target="_blank">CBBBANRZEH93</a>
+									</span>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-2 col-3">
+							<img src="res/coursera.png" class="rounded img-fluid my-section-content-image">
+						</div>
+						<div class="col-sm-10 col-9">
+							<div class="row">
 								<span><span class="my-section-content-title">Deep Learning Specialization / </span>Coursera</span>
 							</div>
 							<div class="row my-secton-content-period">
