--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 					<div class="row">
 						<div class="col-12 my-position">
-							Research Fellow at University of Trento
+							Research Assistant at University of Trento
 						</div>
 					</div>
 					<div class="row">
@@ -142,7 +142,7 @@
 						</div>
 						<div class="col-sm-10 col-9">
 							<div class="row">
-								<span><span class="my-section-content-title">University of Trento / </span>Research Fellow (SiS Lab)</span>
+								<span><span class="my-section-content-title">University of Trento / </span>Research Assistant (SiS Lab)</span>
 							</div>
 							<div class="row my-secton-content-period">
 								MAR 2020 - AUG 2020, Trento, Italy
