--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
 	<head>
+		<meta http-equiv="Refresh" content="0; url='https://www.idiap.ch/~acoman/'" />
 		<title>Andrei Catalin Coman</title>
 		<meta charset="utf-8">
 		<meta name="description" content="Andrei Catalin Coman's personal website">
